Fix horizontal scroll generated by flash message

--- a/app/assets/stylesheets/partials/layout/_main.scss
+++ b/app/assets/stylesheets/partials/layout/_main.scss
@@ -818,6 +818,10 @@ ul.list-operations {
     .alert.success{
         background-color: rgba(228,254,241,1);
     }
+    .row{
+        margin-left: 0px;
+        margin-right: 0px;
+    }
 }
 
 .institution-detail {
